fix modal z-index

--- a/styles/bnl/stylesheets/scss/_variables.scss
+++ b/styles/bnl/stylesheets/scss/_variables.scss
@@ -723,8 +723,8 @@ $form-validation-states: map-merge(
 $zindex-dropdown:                   1000 !default;
 $zindex-sticky:                     1020 !default;
 $zindex-fixed:                      1030 !default;
-$zindex-modal-backdrop:             1040 !default;
-$zindex-modal:                      1050 !default;
+$zindex-modal-backdrop:             1800;
+$zindex-modal:                      1810;
 $zindex-popover:                    1060 !default;
 $zindex-tooltip:                    2000 !default;
 
